--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Sam's Test Docs
-description: Sam Testing Jekyll Themes for User Docs
-baseurl: "/Sam-Test-Docs" # the subpath of your site, e.g. /blog
-url: "https://SamLee77.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+title: Pytab Tableau User Docs
+description: User docs on how to use the Pytab Tableau software
+baseurl: "/Choi-Pytab-Tableau" # the subpath of your site, e.g. /blog
+url: "https://cysong12.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
