--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Pytab Tableau User Docs
-description: User docs on how to use the Pytab Tableau software
-baseurl: "/Choi-Pytab-Tableau" # the subpath of your site, e.g. /blog
+title: Tableau Desktop Public Edition Basic Tutorial
+description: Learn how to create visualizations on Tableau Desktop
+baseurl: "/Tableau-Desktop-Public-Edition" # the subpath of your site, e.g. /blog
 url: "https://cysong12.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
